# mpsoc_fsbl_rust

./: LICENSE  README.md  fsbl_linker.ld
.cargo/: config.toml
.github/workflows/: rust.yml
documentation/: boot_image_structure.txt  fsbl_flow_from_xilinx.txt  fsbl_requirements.txt  fsbl_task_dependencies.txt  mpsoc_boot_devices.txt  mpsoc_boot_flow.txt  mpsoc_reset_types.txt
mpsoc_fsbl_rust/: Cargo.toml  fsbl_linker.ld
mpsoc_fsbl_rust/src/: fsbl_flow_from_xilinx.txt  main.rs
src/: crl_apb_constants.rs  csu_constants.rs  main.rs  sd_card_device.rs  sdio_constants.rs
