[package]
name = "mpsoc_fsbl_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mpsoc_fsbl"
path = "src/main.rs"
test = false    # Disables the automatic 'test' crate injection
bench = false   # Disables the automatic 'bench' crate injection

[profile.release]
# '3' is maximum speed, 's' is small size, 'z' is even smaller
opt-level = 3 
# Link Time Optimization: Analyzes the whole program to remove unused code
lto = true 
# Tells the compiler to use one single 'unit' to optimize better across files
codegen-units = 1 
# Essential for bare-metal: prevents the binary from trying to 'unwind' a stack
panic = "abort" 
# Strips symbols and debug info from the binary to save space
strip = true